<resources>
    <string name="app_name">Bin List</string>
    <string name="enter_card_number">Enter card number</string>
    <string name="error_string">Card number less than 6</string>
    <string name="card_scheme">Card Scheme:</string>
    <string name="unavailable">Not Available</string>
    <string name="card_type">Card Type:</string>
    <string name="bank">Bank:</string>
    <string name="country">Country:</string>
    <string name="card_length">Card number length:</string>
    <string name="prepaid">Is Card Prepaid?: </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="card_details">Card Details</string>
</resources>